Minor styling changes, first of many...

--- a/update_supply_chain_information/chain_details/templates/includes/chain_vulnerabilities.html
+++ b/update_supply_chain_information/chain_details/templates/includes/chain_vulnerabilities.html
@@ -12,7 +12,7 @@
         <div class="govuk-tabs" data-module="govuk-tabs">
             <ul class="govuk-tabs__list">
                 <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-                    <a class="govuk-tabs__tab" href="#supply-stage">
+                    <a class="govuk-tabs__tab" style="color:royalblue;" href="#supply-stage">
                         <div class="govuk-!-font-size-10">
                             {% include "svg_rag_rating_icon.html" with rag_rating=vul_supply.supply_stage_rag_rating|default:'None' %}
                         </div>
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#receive-stage">
+                    <a class="govuk-tabs__tab" style="color:royalblue;" href="#receive-stage">
                         <div>
                             {% include "svg_rag_rating_icon.html" with rag_rating=vul_receive.receive_stage_rag_rating|default:'None' %}
                         </div>
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#make-stage">
+                    <a class="govuk-tabs__tab" style="color:royalblue;" href="#make-stage">
                         <div>
                             {% include "svg_rag_rating_icon.html" with rag_rating=vul_make.make_stage_rag_rating|default:'None' %}
                         </div>
@@ -36,7 +36,7 @@
                     </a>
                 </li>
                 <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#store-stage">
+                    <a class="govuk-tabs__tab" style="color:royalblue;" href="#store-stage">
                         <div>
                             {% include "svg_rag_rating_icon.html" with rag_rating=vul_store.store_stage_rag_rating|default:'None' %}
                         </div>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#deliver-stage">
+                    <a class="govuk-tabs__tab" style="color:royalblue;" href="#deliver-stage">
                         <div>
                             {% include "svg_rag_rating_icon.html" with rag_rating=vul_deliver.deliver_stage_rag_rating|default:'None' %}
                         </div>
