Adding e2e vulnerability rating tests within SCD info

--- a/update_supply_chain_information/chain_details/templates/includes/vul_deliver_stage.html
+++ b/update_supply_chain_information/chain_details/templates/includes/vul_deliver_stage.html
@@ -1,10 +1,10 @@
 {% load scd_tags %}
 
 
-<div class="govuk-accordion" data-module="govuk-accordion" id="supply-accordion">
+<div class="govuk-accordion" data-module="govuk-accordion" id="deliver-accordion">
     {% with char_id='14' %}
     {% with it=forloop.counter|stringformat:"i" %}
-    {% with heading="accordion-default-heading-"|add:it content="accordion-default-content-"|add:it %}
+    {% with heading="deliver-accordion-heading-"|add:it content="deliver-accordion-content-"|add:it %}
     <div class="govuk-accordion__section ">
         <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
